# trampoline

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
itest/: .gitignore  pyproject.toml
itest/tests/: helpers.py  hodl_plugin.py  test_description_hash.py  test_exemptfee.py  test_force_close.py  test_inflight_restart.py  test_partial_resolve.py  test_pay_trampoline_node.py  test_regular_forward.py  test_trampoline.py
src/: block_watcher.rs  email.rs  htlc_manager.rs  main.rs  messages.rs  payment_provider.rs  plugin.rs  rpc.rs  store.rs  tlv.rs
src/cln_plugin/: codec.rs  logging.rs  messages.rs  mod.rs  options.rs
