[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
aws-config = "1.5.11"
aws-sdk-sesv2 = "1.58.0"
bytes = "1.6.0"
cln-rpc = "0.1.9"
futures = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
lightning = "0.0.123"
lightning-invoice = "0.31.0"
# Pin secp256k1 to the same version lightning-invoice and cln-rpc are using.
secp256k1 = { version = "0.27.0", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.5"

[dev-dependencies]
mockall = "0.12.1"
