[tool.poetry]
name = "trampoline"
version = "0.1.0"
description = ""
authors = ["Jesse de Wit <witdejesse@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest-timeout = "^2.1.0"
pytest-xdist = "^2.5.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyln-client = "^24.5"
pyln-testing = "^24.5"
pyln-proto = "^24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
